--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -14,4 +14,5 @@
     </p>
     <p>{{ post.body|truncatechars:100|linebreaks }}</p>
   {% endfor %}
+  {% include 'pagination.html' with page=page_obj %}
 {% endblock %}
