--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -11,4 +11,7 @@
     {% translate 'Published' %} {{ post.publish }} {% translate 'by' %} {{ post.author }}
   </p>
   <p>{{ post.body|linebreaks }}</p>
+  <p>
+    <a href="{% url 'blog:post_share' post.id %}">{% translate 'Share this post' %}</a>
+  </p>
 {% endblock %}
