--- a/blog/templates/pagination.html
+++ b/blog/templates/pagination.html
@@ -1,11 +1,12 @@
+{% load i18n %}
 <div class="pagination">
   <span class="step-links">
     {% if page.has_previous %}
-      <a href="?page={{ page.previous_page_number }}">Previous</a>
+      <a href="?page={{ page.previous_page_number }}">{% translate 'Previous' %}</a>
     {% endif %}
-    <span class="current">Page {{ page.number }} of {{ page.paginator.num_pages }}.</span>
+    <span class="current">{% translate 'Page' %} {{ page.number }} {% translate 'of' %} {{ page.paginator.num_pages }}.</span>
     {% if page.has_next %}
-      <a href="?page={{ page.next_page_number }}">Next</a>
+      <a href="?page={{ page.next_page_number }}">{% translate 'Next' %}</a>
     {% endif %}
   </span>
 </div>
