--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load i18n %}
+{% load blog_tags %}
 <DOCTYPE html>
   <html>
     <head>
@@ -9,19 +10,45 @@
         {% endblock %}
       </title>
       <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
+      <link rel="stylesheet" href="{% static 'css/w3.css' %}" />
+      <script src="{% static 'js/blog.js' %}"></script>
     </head>
     <body>
-      <div id="content">
-        {% block content %}
+      <!-- Sidebar -->
+      <div class="w3-sidebar w3-bar-block sidebar" style="display:none; z-index:5" id="mySidebar">
+        <button class="w3-bar-item w3-button w3-xxlarge" onclick="w3_close()"><i>&times;</i></button>
+        <a href="{% url 'blog:post_list' %}" class="w3-bar-item w3-button">{% translate 'Posts' %}</a>
+        <div class="w3-panel w3-display-container sidebar-content">
+          <h2>{% translate 'My blog' %}</h2>
+          <p>
+            {% translate 'This is my blog' %} {% translate "I've written" %} {% total_posts %} {% translate 'posts so far' %}
+          </p>
+          <h3>{% translate 'Latest posts' %}</h3>
+          {% show_latest_posts 3 %}
+          <h3>{% translate 'Most commented posts' %}</h3>
+          {% get_most_commented_posts 3 as most_commented_posts %}
+          <ul>
+            {% for post in most_commented_posts %}
+              <li>
+                <a href="{{ post.get_absolute_url }}" class="link">{{ post.title }}</a>
+              </li>
+            {% endfor %}
+          </ul>
+        </div>
+      </div>
+      <!-- Page Content -->
+      <main class="main" id="mainContent">
+        <div class="side-block">
+          <button class="w3-button w3-white w3-xxlarge menu-button" onclick="w3_open()">&#9776;</button>
+        </div>
+        <div class="w3-overlay overlay" onclick="w3_close()" id="myOverlay"></div>
+        <div id="content" class="w3-container content">
+          {% block content %}
 
-        {% endblock %}
-      </div>
-      <div id="sidebar">
-        <h2>{% translate 'My blog' %}</h2>
-        <p>
-          {% translate 'This is my blog' %}.
-        </p>
-      </div>
+          {% endblock %}
+        </div>
+        <div class="side-block"></div>
+      </main>
     </body>
   </html>
 </DOCTYPE>
