--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load i18n %}
+{% load blog_tags %}
 
 {% block title %}
   {{ post.title }}
@@ -10,10 +11,22 @@
   <p class="date">
     {% translate 'Published' %} {{ post.publish }} {% translate 'by' %} {{ post.author }}
   </p>
-  <p>{{ post.body|linebreaks }}</p>
+  <p>{{ post.body|markdown }}</p>
   <p>
-    <a href="{% url 'blog:post_share' post.id %}">{% translate 'Share this post' %}</a>
+    <a href="{% url 'blog:post_share' post.id %}" class="link">{% translate 'Share this post' %}</a>
   </p>
+
+  <h2>{% translate 'Similar posts' %}</h2>
+  {% for post in similar_posts %}
+    <p>
+      <a href="{{ post.get_absolute_url }}" class="link">{{ post.title }}</a>
+    </p>
+  {% empty %}
+    <p>
+      {% translate 'There are no similar posts yet.' %}
+    </p>
+  {% endfor %}
+
   <h2>{% blocktranslate count comments.count as total_comments %}{{ total_comments }} comment{% plural %}{{ total_comments }} comments{% endblocktranslate %}</h2>
   {% for comment in comments %}
     <div class="comment">
