--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -1,5 +1,6 @@
 {% extends 'blog/base.html' %}
 {% load i18n %}
+{% load blog_tags %}
 
 {% block title %}
   {% translate 'My Blog' %}
@@ -11,16 +12,16 @@
     <h2>{% translate 'Posts tagged with' %} {{ tag.name }}</h2>
   {% endif %}
   {% for post in posts %}
-    <h2><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h2>
+    <h2><a href="{{ post.get_absolute_url }}" class="link">{{ post.title }}</a></h2>
     <p class="tags">
       {% translate 'Tags' %}:{% for tag in post.tags.all %}
-        <a href="{% url 'blog:post_list_by_tag' tag.slug %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+        <a href="{% url 'blog:post_list_by_tag' tag.slug %}" class="link">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
       {% endfor %}
     </p>
     <p class="date">
       {% translate 'Published' %} {{ post.publish }} {% translate 'by' %} {{ post.author }}
     </p>
-    <p>{{ post.body|truncatechars:100|linebreaks }}</p>
+    <p>{{ post.body|markdown|truncatewords_html:100 }}</p>
   {% endfor %}
   {% include 'pagination.html' with page=page_obj %}
 {% endblock %}
