--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -23,6 +23,9 @@
           <p>
             {% translate 'This is my blog' %} {% translate "I've written" %} {% total_posts %} {% translate 'posts so far' %}
           </p>
+          <p>
+            <a href="{% url 'blog:post_feed' %}" class="link">{% translate 'Subscribe to my RSS feed' %}</a>
+          </p>
           <h3>{% translate 'Latest posts' %}</h3>
           {% show_latest_posts 3 %}
           <h3>{% translate 'Most commented posts' %}</h3>
