--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -18,6 +18,7 @@
       <div class="w3-sidebar w3-bar-block sidebar" style="display:none; z-index:5" id="mySidebar">
         <button class="w3-bar-item w3-button w3-xxlarge" onclick="w3_close()"><i>&times;</i></button>
         <a href="{% url 'blog:post_list' %}" class="w3-bar-item w3-button">{% translate 'Posts' %}</a>
+        <a href="{% url 'blog:post_search' %}" class="w3-bar-item w3-button">{% translate 'Search' %}</a>
         <div class="w3-panel w3-display-container sidebar-content">
           <h2>{% translate 'My blog' %}</h2>
           <p>
