--- a/blog/templates/blog/post/comment.html
+++ b/blog/templates/blog/post/comment.html
@@ -1,13 +1,13 @@
 {% extends 'blog/base.html' %}
 {% load i18n %}
 {% block title %}
-  {% translate 'Add a comment' %}
+  {% trans 'Add a comment' %}
 {% endblock %}
 {% block content %}
   {% if comment %}
-    <h2>{% translate 'Your comment has been added' %}.</h2>
+    <h2>{% trans 'Your comment has been added' %}.</h2>
     <p>
-      <a href="{{ post.get_absolute_url }}" class="link">{% translate 'Back to the post' %}</a>
+      <a href="{{ post.get_absolute_url }}" class="link">{% trans 'Back to the post' %}</a>
     </p>
   {% else %}
     {% include 'blog/post/includes/comment_form.html' %}
