--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -9,36 +9,36 @@
 {% block content %}
   <h1>{{ post.title }}</h1>
   <p class="date">
-    {% translate 'Published' %} {{ post.publish }} {% translate 'by' %} {{ post.author }}
+    {% trans 'Published' %} {{ post.publish }} {% trans 'by' %} {{ post.author }}
   </p>
   <p>{{ post.body|markdown }}</p>
   <p>
-    <a href="{% url 'blog:post_share' post.id %}" class="link">{% translate 'Share this post' %}</a>
+    <a href="{% url 'blog:post_share' post.id %}" class="link">{% trans 'Share this post' %}</a>
   </p>
 
-  <h2>{% translate 'Similar posts' %}</h2>
+  <h2>{% trans 'Similar posts' %}</h2>
   {% for post in similar_posts %}
     <p>
       <a href="{{ post.get_absolute_url }}" class="link">{{ post.title }}</a>
     </p>
   {% empty %}
     <p>
-      {% translate 'There are no similar posts yet.' %}
+      {% trans 'There are no similar posts yet.' %}
     </p>
   {% endfor %}
 
-  <h2>{% blocktranslate count comments.count as total_comments %}{{ total_comments }} comment{% plural %}{{ total_comments }} comments{% endblocktranslate %}</h2>
+  <h2>{% blocktrans count comments.count as total_comments %}{{ total_comments }} comment{% plural %}{{ total_comments }} comments{% endblocktrans %}</h2>
   {% for comment in comments %}
     <div class="comment">
       <p class="info">
-        {% translate 'Comment' %} {{ forloop.counter }} {% translate 'by' %} {{ comment.name }}
+        {% trans 'Comment' %} {{ forloop.counter }} {% trans 'by' %} {{ comment.name }}
         {{ comment.created }}
       </p>
       {{ comment.body|linebreaks }}
     </div>
   {% empty %}
     <p>
-      {% translate 'There are no comments' %}.
+      {% trans 'There are no comments' %}.
     </p>
   {% endfor %}
   {% include 'blog/post/includes/comment_form.html' %}
