--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -3,23 +3,23 @@
 {% load blog_tags %}
 
 {% block title %}
-  {% translate 'My Blog' %}
+  {% trans 'My Blog' %}
 {% endblock %}
 
 {% block content %}
-  <h1>{% translate 'My Blog' %}</h1>
+  <h1>{% trans 'My Blog' %}</h1>
   {% if tag %}
-    <h2>{% translate 'Posts tagged with' %} {{ tag.name }}</h2>
+    <h2>{% trans 'Posts tagged with' %} {{ tag.name }}</h2>
   {% endif %}
   {% for post in posts %}
     <h2><a href="{{ post.get_absolute_url }}" class="link">{{ post.title }}</a></h2>
     <p class="tags">
-      {% translate 'Tags' %}:{% for tag in post.tags.all %}
+      {% trans 'Tags' %}:{% for tag in post.tags.all %}
         <a href="{% url 'blog:post_list_by_tag' tag.slug %}" class="link">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
       {% endfor %}
     </p>
     <p class="date">
-      {% translate 'Published' %} {{ post.publish }} {% translate 'by' %} {{ post.author }}
+      {% trans 'Published' %} {{ post.publish }} {% trans 'by' %} {{ post.author }}
     </p>
     <p>{{ post.body|markdown|truncatewords_html:100 }}</p>
   {% endfor %}
