--- a/blog/templates/blog/post/search.html
+++ b/blog/templates/blog/post/search.html
@@ -2,28 +2,28 @@
 {% load i18n %}
 {% load blog_tags %}
 {% block title %}
-  {% translate 'Search' %}
+  {% trans 'Search' %}
 {% endblock %}
 {% block content %}
   {% if query %}
-    <h1>{% translate 'Posts containing' %} {{ query }}</h1>
-    <h3>{% blocktranslate count results.count as total_results %}Found {{ total_results }} result{% plural %}Found {{ total_results }} results{% endblocktranslate %}</h3>
+    <h1>{% trans 'Posts containing' %} {{ query }}</h1>
+    <h3>{% blocktrans count results.count as total_results %}Found {{ total_results }} result{% plural %}Found {{ total_results }} results{% endblocktrans %}</h3>
     {% for post in results %}
       <h4><a href="{{ post.get_absolute_url }}" class="link">{{ post.title }}</a></h4>
       {{ post.body|markdown|truncatewords_html:12 }}
     {% empty %}
       <p>
-        {% translate 'There are no results for your query' %}.
+        {% trans 'There are no results for your query' %}.
       </p>
     {% endfor %}
     <p>
-      <a href="{% url 'blog:post_search' %}" class="link">{% translate 'Search again' %}</a>
+      <a href="{% url 'blog:post_search' %}" class="link">{% trans 'Search again' %}</a>
     </p>
   {% else %}
-    <h1>{% translate 'Search for posts' %}</h1>
+    <h1>{% trans 'Search for posts' %}</h1>
     <form method="get">
       {{ form.as_p }}
-      <input type="submit" value="{% translate 'Search' %}" />
+      <input type="submit" value="{% trans 'Search' %}" />
     </form>
   {% endif %}
 {% endblock %}
