--- a/blog/templates/blog/post/share.html
+++ b/blog/templates/blog/post/share.html
@@ -1,20 +1,20 @@
 {% extends 'blog/base.html' %}
 {% load i18n %}
 {% block title %}
-  {% translate 'Share a post' %}
+  {% trans 'Share a post' %}
 {% endblock %}
 {% block content %}
   {% if sent %}
-    <h1>{% translate 'E-mail successfully sent' %}</h1>
+    <h1>{% trans 'E-mail successfully sent' %}</h1>
     <p>
-      {{ post.title }} {% translate 'was successfully sent to' %} {{ form.cleaned_data.to }}.
+      {{ post.title }} {% trans 'was successfully sent to' %} {{ form.cleaned_data.to }}.
     </p>
   {% else %}
-    <h1>{% translate 'Share' %} {{ post.title }} {% translate 'by e-mail' %}</h1>
+    <h1>{% trans 'Share' %} {{ post.title }} {% trans 'by e-mail' %}</h1>
     <form method="post">
       {{ form.as_p }}
       {% csrf_token %}
-      <input type="submit" value="{% translate 'Send e-mail' %}" />
+      <input type="submit" value="{% trans 'Send e-mail' %}" />
     </form>
   {% endif %}
 {% endblock %}
