--- a/blog/templates/pagination.html
+++ b/blog/templates/pagination.html
@@ -2,11 +2,11 @@
 <div class="pagination">
   <span class="step-links">
     {% if page.has_previous %}
-      <a href="?page={{ page.previous_page_number }}" class="link">{% translate 'Previous' %}</a>
+      <a href="?page={{ page.previous_page_number }}" class="link">{% trans 'Previous' %}</a>
     {% endif %}
-    <span class="current">{% translate 'Page' %} {{ page.number }} {% translate 'of' %} {{ page.paginator.num_pages }}.</span>
+    <span class="current">{% trans 'Page' %} {{ page.number }} {% trans 'of' %} {{ page.paginator.num_pages }}.</span>
     {% if page.has_next %}
-      <a href="?page={{ page.next_page_number }}" class="link">{% translate 'Next' %}</a>
+      <a href="?page={{ page.next_page_number }}" class="link">{% trans 'Next' %}</a>
     {% endif %}
   </span>
 </div>
