--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -19,5 +19,8 @@
         <input type="submit" class="button" value="{% trans 'Log-in' %}" />
       </p>
     </form>
+    <p>
+      <a href="{% url 'account:password_reset' %}">{% trans 'Forgotten your password' %}?</a>
+    </p>
   </div>
 {% endblock %}
