rename css and refactoring start project by gunicorn

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -8,7 +8,7 @@
 
       {% endblock %}
     </title>
-    <link href="{% static 'css/base.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/account.css' %}" rel="stylesheet" />
     {% comment %} <link href="{% static 'css/w3.css' %}" rel="stylesheet" /> {% endcomment %}
   </head>
   <body>
