refactoring of templates

--- a/account/templates/registration/password_change_done.html
+++ b/account/templates/registration/password_change_done.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Password changed' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Password changed' %}</h1>
   <p>
     {% trans 'Your password has been successfully changed' %}.
