--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -6,7 +6,7 @@
   {{ post.title }}
 {% endblock %}
 
-{% block content %}
+{% block blog_content %}
   <h1>{{ post.title }}</h1>
   <p class="date">
     {% trans 'Published' %} {{ post.publish }} {% trans 'by' %} {{ post.author }}
