--- a/blog/templates/blog/post/list.html
+++ b/blog/templates/blog/post/list.html
@@ -6,7 +6,7 @@
   {% trans 'My Blog' %}
 {% endblock %}
 
-{% block content %}
+{% block blog_content %}
   <h1>{% trans 'My Blog' %}</h1>
   {% if tag %}
     <h2>{% trans 'Posts tagged with' %} {{ tag.name }}</h2>
