--- a/blog/templates/blog/post/share.html
+++ b/blog/templates/blog/post/share.html
@@ -3,7 +3,7 @@
 {% block title %}
   {% trans 'Share a post' %}
 {% endblock %}
-{% block content %}
+{% block blog_content %}
   {% if sent %}
     <h1>{% trans 'E-mail successfully sent' %}</h1>
     <p>
