--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Dashboard' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Dashboard' %}</h1>
   <p>
     {% trans 'Welcome to your dashboard' %}. <span>
