--- a/account/templates/account/edit.html
+++ b/account/templates/account/edit.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Edit your account' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Edit your account' %}</h1>
   <p>
     {% trans 'You can edit your account using the following form' %}:
