--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Create an account' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Create an account' %}</h1>
   <p>
     {% trans 'Please, sign up using the following form' %}:
