--- a/account/templates/account/register_done.html
+++ b/account/templates/account/register_done.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Welcome' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Welcome' %}, {{ new_user.first_name }}!</h1>
   <p>
     {% trans 'Your account has been successfully created. Now you can' %} <a href="{% url 'account:login' %}">{% trans 'log-in' %}</a>.
