--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Log-in' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Log-in' %}</h1>
   {% if not form.errors %}
     <p>
