--- a/account/templates/registration/password_change_form.html
+++ b/account/templates/registration/password_change_form.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Change your password' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Change your password' %}</h1>
   <p>
     {% trans 'Use the form below to change your password' %}.
