--- a/account/templates/registration/password_reset_complete.html
+++ b/account/templates/registration/password_reset_complete.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Password reset' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Password reset' %}</h1>
   <p>
     {% trans 'Your password has been reset. You can' %} <a href="{% url 'account:login' %}">{% trans 'log-in now' %}</a>
