--- a/account/templates/registration/password_reset_confirm.html
+++ b/account/templates/registration/password_reset_confirm.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Reset your password' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Reset your password' %}</h1>
   {% if validlink %}
     <p>
