--- a/account/templates/registration/password_reset_form.html
+++ b/account/templates/registration/password_reset_form.html
@@ -1,9 +1,9 @@
-{% extends 'base.html' %}
+{% extends 'account/base.html' %}
 {% load i18n %}
 {% block title %}
   {% trans 'Reset your password' %}
 {% endblock %}
-{% block content %}
+{% block account_content %}
   <h1>{% trans 'Forgotten your password' %}?</h1>
   <p>
     {% trans 'Enter your e-mail address to obtain a new password' %}.
