--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,58 +1,49 @@
+{% extends 'base.html' %}
 {% load static %}
 {% load i18n %}
 {% load blog_tags %}
-<DOCTYPE html>
-  <html>
-    <head>
-      <title>
-        {% block title %}
+{% block source %}
+  <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
+  <script src="{% static 'js/blog.js' %}"></script>
+{% endblock %}
+{% block content %}
+  <!-- Sidebar -->
+  <div class="w3-sidebar w3-bar-block sidebar" style="display:none; z-index:5" id="mySidebar">
+    <button class="w3-bar-item w3-button w3-xxlarge" onclick="w3_close()"><i>&times;</i></button>
+    <a href="{% url 'blog:post_list' %}" class="w3-bar-item w3-button">{% trans 'Posts' %}</a>
+    <a href="{% url 'blog:post_search' %}" class="w3-bar-item w3-button">{% trans 'Search' %}</a>
+    <div class="w3-panel w3-display-container sidebar-content">
+      <h2>{% trans 'My blog' %}</h2>
+      <p>
+        {% trans 'This is my blog' %} {% trans "I've written" %} {% total_posts %} {% trans 'posts so far' %}
+      </p>
+      <p>
+        <a href="{% url 'blog:post_feed' %}" class="link">{% trans 'Subscribe to my RSS feed' %}</a>
+      </p>
+      <h3>{% trans 'Latest posts' %}</h3>
+      {% show_latest_posts 3 %}
+      <h3>{% trans 'Most commented posts' %}</h3>
+      {% get_most_commented_posts 3 as most_commented_posts %}
+      <ul>
+        {% for post in most_commented_posts %}
+          <li>
+            <a href="{{ post.get_absolute_url }}" class="link">{{ post.title }}</a>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+  <!-- Page Content -->
+  <main class="main" id="mainContent">
+    <div class="side-block">
+      <button class="w3-xxlarge w3-button" onclick="w3_open()">&#9776;</button>
+    </div>
+    <div class="w3-overlay overlay" onclick="w3_close()" id="myOverlay"></div>
+    <div id="blog_content" class="w3-container content">
+      {% block blog_content %}
 
-        {% endblock %}
-      </title>
-      <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
-      <link rel="stylesheet" href="{% static 'css/w3.css' %}" />
-      <script src="{% static 'js/blog.js' %}"></script>
-    </head>
-    <body>
-      <!-- Sidebar -->
-      <div class="w3-sidebar w3-bar-block sidebar" style="display:none; z-index:5" id="mySidebar">
-        <button class="w3-bar-item w3-button w3-xxlarge" onclick="w3_close()"><i>&times;</i></button>
-        <a href="{% url 'blog:post_list' %}" class="w3-bar-item w3-button">{% trans 'Posts' %}</a>
-        <a href="{% url 'blog:post_search' %}" class="w3-bar-item w3-button">{% trans 'Search' %}</a>
-        <div class="w3-panel w3-display-container sidebar-content">
-          <h2>{% trans 'My blog' %}</h2>
-          <p>
-            {% trans 'This is my blog' %} {% trans "I've written" %} {% total_posts %} {% trans 'posts so far' %}
-          </p>
-          <p>
-            <a href="{% url 'blog:post_feed' %}" class="link">{% trans 'Subscribe to my RSS feed' %}</a>
-          </p>
-          <h3>{% trans 'Latest posts' %}</h3>
-          {% show_latest_posts 3 %}
-          <h3>{% trans 'Most commented posts' %}</h3>
-          {% get_most_commented_posts 3 as most_commented_posts %}
-          <ul>
-            {% for post in most_commented_posts %}
-              <li>
-                <a href="{{ post.get_absolute_url }}" class="link">{{ post.title }}</a>
-              </li>
-            {% endfor %}
-          </ul>
-        </div>
-      </div>
-      <!-- Page Content -->
-      <main class="main" id="mainContent">
-        <div class="side-block">
-          <button class="w3-xxlarge w3-button" onclick="w3_open()">&#9776;</button>
-        </div>
-        <div class="w3-overlay overlay" onclick="w3_close()" id="myOverlay"></div>
-        <div id="content" class="w3-container content">
-          {% block content %}
-
-          {% endblock %}
-        </div>
-        <div class="side-block"></div>
-      </main>
-    </body>
-  </html>
-</DOCTYPE>
+      {% endblock %}
+    </div>
+    <div class="side-block"></div>
+  </main>
+{% endblock %}
