--- a/account/static/css/account.css
+++ b/account/static/css/account.css
@@ -172,7 +172,7 @@ ul.messages li a.close {
     width: 100%;
     height: 100%;
     display: block;
-    color: #fff;
+    color: #fff !important;
 }
 
 .social li.google {
