--- a/account/templates/registration/login.html
+++ b/account/templates/registration/login.html
@@ -26,4 +26,11 @@
       <a href="{% url 'account:password_reset' %}">{% trans 'Forgotten your password' %}?</a>
     </p>
   </div>
+  <div class="social">
+    <ul>
+      <li class="google">
+        <a href="{% url 'social:begin' 'google-oauth2' %}">{% trans 'Sign in with Google' %}</a>
+      </li>
+    </ul>
+  </div>
 {% endblock %}
