--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load account_tags %}
 {% load i18n %}
 <!DOCTYPE html>
 <html>
@@ -10,6 +11,9 @@
     </title>
     <link href="{% static 'css/app.css' %}" rel="stylesheet" />
     <link rel="stylesheet" href="{% static 'css/w3.css' %}" />
+    {% if request.user.profile.styles %}
+      <link rel="stylesheet" href="{% media request.user.profile.styles %}" />
+    {% endif %}
     <script src="{% static 'js/main.js' %}"></script>
     {% block source %}
 
@@ -45,16 +49,6 @@
         {% endif %}
       </span>
     </div>
-    {% if messages %}
-      <ul class="messages">
-        {% for message in messages %}
-          <li class="{{ message.tags }}">
-            {{ message|safe }}
-            <a href="#" class="close">x</a>
-          </li>
-        {% endfor %}
-      </ul>
-    {% endif %}
     <div id="content">
       {% block content %}
 
