--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,16 +1,44 @@
+@property --primary-color {
+    syntax: "<color>";
+    inherits: false;
+    initial-value: #DB5D00;
+}
+
+
+@property --secondary-color {
+    syntax: "<color>";
+    inherits: false;
+    initial-value: #9C5827;
+}
+
+
+@property --additional-color {
+    syntax: "<color>";
+    inherits: false;
+    initial-value: #00C6DB;
+}
+
+@property --optional-color {
+    syntax: "<color>";
+    inherits: false;
+    initial-value: #fff;
+}
+
+
+/* header */
 #header {
     padding: 10px 100px;
     font-size: 14px;
-    background: #12c064;
-    color: #fff;
-    border-bottom: 4px solid #1cdf78;
+    background: var(--primary-color);
+    color: var(--optional-color);
+    border-bottom: 4px solid var(--secondary-color);
     overflow: auto;
 }
 
 #header .logo {
     font-family: 'Muli', sans-serif;
     float: left;
-    color: #f3f7cc;
+    color: var(--optional-color);
     font-size: 20px;
     margin-right: 10%;
 }
@@ -29,21 +57,22 @@
 
 #header ul.menu li.selected a,
 #header ul.menu li.selected a:hover {
-    color: #1b6d32 !important;
+    color: var(--secondary-color);
     font-weight: bold;
 }
 
 #header a {
-    color: #f3f7cc !important;
+    color: var(--optional-color);
 }
 
 #header a:hover {
-    color: #fff;
+    color: var(--secondary-color);
 }
 
 #header .user {
     float: right;
     padding-top: 4px;
+    display: flex;
 }
 
 #header .user form {
@@ -53,18 +82,40 @@
 
 #header .user button {
     background: none;
-    color: #f3f7cc;
+    color: var(--secondary-color);
     border: none;
     cursor: pointer;
     float: left;
     display: inline;
 }
 
+/* link */
 a {
-    color: #12c064 !important;
     text-decoration: none;
+    color: var(--primary-color);
 }
 
-a:hover {
-    color: #00a74f;
+.link {
+    color: var(--primary-color);
+}
+
+.link:hover {
+    color: brightness(75%);
+}
+
+/* button */
+input[type=submit],
+a.button {
+    font-weight: bold;
+    background: var(--primary-color);
+    color: var(--optional-color);
+    padding: 10px 20px;
+    font-size: 14px;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+input[type=submit]:hover,
+a.button:hover {
+    background: var(--secondary-color);
 }
