--- a/account/templates/account/base.html
+++ b/account/templates/account/base.html
@@ -11,7 +11,7 @@
       {% for message in messages %}
         <li class="{{ message.tags }}">
           {{ message|safe }}
-          <a href="#" class="close">x</a>
+          <a href="#" class="close link">x</a>
         </li>
       {% endfor %}
     </ul>
