--- a/account/templates/registration/password_reset_complete.html
+++ b/account/templates/registration/password_reset_complete.html
@@ -6,6 +6,6 @@
 {% block account_content %}
   <h1>{% trans 'Password reset' %}</h1>
   <p>
-    {% trans 'Your password has been reset. You can' %} <a href="{% url 'account:login' %}">{% trans 'log-in now' %}</a>
+    {% trans 'Your password has been reset. You can' %} <a href="{% url 'account:login' %}" class="link">{% trans 'log-in now' %}</a>
   </p>
 {% endblock %}
