--- a/blog/templates/blog/post/comment.html
+++ b/blog/templates/blog/post/comment.html
@@ -3,7 +3,7 @@
 {% block title %}
   {% trans 'Add a comment' %}
 {% endblock %}
-{% block content %}
+{% block blog_content %}
   {% if comment %}
     <h2>{% trans 'Your comment has been added' %}.</h2>
     <p>
