--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -7,8 +7,8 @@
   <h1>{% trans 'Dashboard' %}</h1>
   <p>
     {% trans 'Welcome to your dashboard' %}. <span>
-      {% translate 'You can' %} <a href="{% url 'account:edit' %}">{% translate 'edit your profile' %}</a>
-      {% translate 'or' %} <a href="{% url 'account:password_change' %}">{% translate 'change your password' %}</a>.
+      {% translate 'You can' %} <a href="{% url 'account:edit' %}" class="link">{% translate 'edit your profile' %}</a>
+      {% translate 'or' %} <a href="{% url 'account:password_change' %}" class="link">{% translate 'change your password' %}</a>.
     </span>
   </p>
 {% endblock %}
