--- a/account/templates/registration/logged_out.html
+++ b/account/templates/registration/logged_out.html
@@ -7,6 +7,6 @@
   <h1>{% trans 'Logged out' %}</h1>
   <p>
     {% trans 'You have been successfully logged out.' %}
-    {% trans 'You can' %} <a href="{% url 'account:login' %}">{% trans 'log-in again' %}</a>.
+    {% trans 'You can' %} <a href="{% url 'account:login' %}" class="link">{% trans 'log-in again' %}</a>.
   </p>
 {% endblock %}
