--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
               <a href="{% url 'account:dashboard' %}">{% trans 'My dashboard' %}</a>
             </li>
             <li id="images">
-              <a href="#">{% trans 'Images' %}</a>
+              <a href="{% url 'images:create' %}">{% trans 'Images' %}</a>
             </li>
             <li id="people">
               <a href="#">{% trans 'People' %}</a>
@@ -51,6 +51,11 @@
           <a href="{% url 'account:login' %}">{% trans 'Log-in' %}</a>
         {% endif %}
       </span>
+    </div>
+    <div id="sidebar">
+      {% block sidebar %}
+
+      {% endblock %}
     </div>
     <div id="content">
       {% block content %}
