--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,16 @@
       {% endblock %}
     </div>
     <div id="content">
+      {% if messages %}
+        <ul class="messages">
+          {% for message in messages %}
+            <li class="{{ message.tags }}">
+              {{ message|safe }}
+              <a href="#" class="close link">x</a>
+            </li>
+          {% endfor %}
+        </ul>
+      {% endif %}
       {% block content %}
 
       {% endblock %}
