--- a/images/templates/images/image/create.html
+++ b/images/templates/images/image/create.html
@@ -1,11 +1,8 @@
-{% extends 'base.html' %}
+{% extends 'images/base.html' %}
 {% load static %}
 {% load i18n %}
 {% block title %}
   {% trans 'Bookmark an image' %}
-{% endblock %}
-{% block source %}
-  <link href="{% static 'css/images.css' %}" rel="stylesheet" />
 {% endblock %}
 {% block content %}
   <h1>{% trans 'Bookmark an image' %}</h1>
