--- a/images/templates/images/image/detail.html
+++ b/images/templates/images/image/detail.html
@@ -1,18 +1,28 @@
 {% extends 'images/base.html' %}
 {% load i18n %}
+{% load thumbnail %}
 {% block title %}
   {{ image.title }}
 {% endblock %}
 {% block content %}
   <h1>{{ image.title }}</h1>
-  <img src="{{ image.image.url }}" class="image-detail" />
+  <a href="{{ image.image.url }}"><img src="{% thumbnail image.image 300x0 %}" class="image-detail" /></a>
   <div class="image-info">
     <div>
       <span class="count">
         {% blocktrans count image.users_like.count as total_likes %}
-        {{ total_likes }} like{% plural %}
-        {{ total_likes }} likes{% endblocktrans %}
+        <span class="total">{{ total_likes }}</span> like{% plural %}
+        <span class="total">{{ total_likes }}</span> likes{% endblocktrans %}
       </span>
+      {% with users_like=image.users_like.all %}
+        <a href="#" data-id="{{ image.id }}" data-action="{% if request.user in users_like %}un{% endif %}like" class="like button">
+          {% if request.user not in users_like %}
+            {% trans 'Like' %}
+          {% else %}
+            {% trans 'Unlike' %}
+          {% endif %}
+        </a>
+      {% endwith %}
     </div>
     {{ image.description|linebreaks }}
   </div>
