--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
               <a href="{% url 'account:dashboard' %}">{% trans 'My dashboard' %}</a>
             </li>
             <li id="images">
-              <a href="{% url 'images:create' %}">{% trans 'Images' %}</a>
+              <a href="{% url 'images:list' %}">{% trans 'Images' %}</a>
             </li>
             <li id="people">
               <a href="#">{% trans 'People' %}</a>
