--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
               <a href="{% url 'images:list' %}">{% trans 'Images' %}</a>
             </li>
             <li id="people">
-              <a href="#">{% trans 'People' %}</a>
+              <a href="{% url 'account:user_list' %}">{% trans 'People' %}</a>
             </li>
             <li id="blog">
               <a href="{% url 'blog:post_list' %}">{% trans 'Blog' %}</a>
