--- a/account/templates/account/dashboard.html
+++ b/account/templates/account/dashboard.html
@@ -18,4 +18,10 @@
     {% translate 'You can also' %} <a href="{% url 'account:edit' %}" class="link">{% translate 'edit your profile' %}</a>
     {% translate 'or' %} <a href="{% url 'account:password_change' %}" class="link">{% translate 'change your password' %}</a>.
   </p>
+  <h2>{% trans "What's happening" %}</h2>
+  <div id="action-list">
+    {% for action in actions %}
+      {% include 'actions/action/detail.html' %}
+    {% endfor %}
+  </div>
 {% endblock %}
