--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@
             <li id="blog">
               <a href="{% url 'blog:post_list' %}">{% trans 'Blog' %}</a>
             </li>
+            <li id="shop">
+              <a href="{% url 'shop:product_list' %}">{% trans 'Shop' %}</a>
+            </li>
           </ul>
         {% endif %}
       </div>
