--- a/shop/static/css/shop.css
+++ b/shop/static/css/shop.css
@@ -153,3 +153,22 @@ form div.field {
     color: #666;
     border-radius: 4px;
 }
+
+label {
+    float: none;
+    clear: both;
+    color: #333;
+    margin-bottom: 4px;
+}
+
+input,
+textarea {
+    float: none;
+    clear: both;
+    margin: 0 0 10px;
+    background: #efefef;
+    border: 0;
+    padding: 6px 10px;
+    font-size: 14px;
+    resize: none;
+}
