--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -17,6 +17,18 @@
   <button class="w3-xxlarge w3-button menu-button" onclick="w3_open()">&#9776;</button>
 {% endblock %}
 {% block content %}
+  <div id="subheader">
+    <div class="cart">
+      {% with total_items=cart|length %}
+        {% if total_items > 0 %}
+          {% trans 'Your cart' %}:
+          <a href="{% url 'cart:cart_detail' %}">{% blocktrans count total_items as total_items %}{{ total_items }} item{% plural %} {{ total_items }} items{% endblocktrans %}, ${{ cart.get_total_price }}</a>
+        {% else %}
+          {% trans 'Your cart is empty' %}.
+        {% endif %}
+      {% endwith %}
+    </div>
+  </div>
   <main class="main" id="mainContent">
     <div class="side-block"></div>
     <div class="w3-overlay overlay" onclick="w3_close()" id="myOverlay"></div>
@@ -25,12 +37,6 @@
 
       {% endblock %}
     </div>
-    <div class="side-block">
-      <div id="subheader">
-        <div class="cart">
-          {% trans 'Your cart is empty' %}.
-        </div>
-      </div>
-    </div>
+    <div class="side-block"></div>
   </main>
 {% endblock %}
