--- a/static/css/app.css
+++ b/static/css/app.css
@@ -109,7 +109,7 @@ table {
 
 table th,
 table td {
-    text-align: left;
+    text-align: left !important;
     font-size: 14px;
     padding: 10px;
     margin: 0;
@@ -352,8 +352,7 @@ ul.messages li a.close {
 
 /* Sidebar */
 #sidebar a.selected {
-    background: var(--primary-color);
-    color: var(--secondary-color);
+    filter: brightness(75%);
     font-weight: bold;
 }
 
