--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -60,8 +60,8 @@
                 {% csrf_token %}
               </form>
             </td>
-            <td class="num">${{ item.price }}</td>
-            <td class="num">${{ item.total_price }}</td>
+            <td class="num">&#8381;{{ item.price }}</td>
+            <td class="num">&#8381;{{ item.total_price }}</td>
           </tr>
         {% endwith %}
       {% endfor %}
@@ -70,7 +70,7 @@
           {% trans 'Total' %}
         </td>
         <td colspan="4"></td>
-        <td class="num">${{ cart.get_total_price }}</td>
+        <td class="num">&#8381;{{ cart.get_total_price }}</td>
       </tr>
     </tbody>
   </table>
