--- a/orders/templates/orders/order/create.html
+++ b/orders/templates/orders/order/create.html
@@ -11,12 +11,12 @@
       {% for item in cart %}
         <li>
           {{ item.quantity }}x {{ item.product.name }}
-          <span>${{ item.total_price }}</span>
+          <span>&#8381;{{ item.total_price }}</span>
         </li>
       {% endfor %}
     </ul>
     <p>
-      {% trans 'Total' %}: ${{ cart.get_total_price }}
+      {% trans 'Total' %}: &#8381;{{ cart.get_total_price }}
     </p>
   </div>
   <form method="post" class="order-form">
