--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -22,7 +22,7 @@
       {% with total_items=cart|length %}
         {% if total_items > 0 %}
           {% trans 'Your cart' %}:
-          <a href="{% url 'cart:cart_detail' %}">{% blocktrans count total_items as total_items %}{{ total_items }} item{% plural %} {{ total_items }} items{% endblocktrans %}, ${{ cart.get_total_price }}</a>
+          <a href="{% url 'cart:cart_detail' %}">{% blocktrans count total_items as total_items %}{{ total_items }} item{% plural %} {{ total_items }} items{% endblocktrans %}, &#8381;{{ cart.get_total_price }}</a>
         {% elif not order %}
           {% trans 'Your cart is empty' %}.
         {% endif %}
