--- a/shop/templates/shop/product/detail.html
+++ b/shop/templates/shop/product/detail.html
@@ -13,7 +13,7 @@
       {% endif %}" />
     <h1>{{ product.name }}</h1>
     <h2><a href="{{ product.category.get_absolute_url }}">{{ product.category }}</a></h2>
-    <p class="price">${{ product.price }}</p>
+    <p class="price">&#8381;{{ product.price }}</p>
     <form action="{% url 'cart:cart_add' product.id %}" method="post">
       {{ cart_product_form }}
       {% csrf_token %}
