--- a/cart/templates/cart/detail.html
+++ b/cart/templates/cart/detail.html
@@ -65,15 +65,39 @@
           </tr>
         {% endwith %}
       {% endfor %}
+      {% if cart.coupon %}
+        <tr class="subtotal">
+          <td>
+            {% trans 'Subtotal' %}
+          </td>
+          <td colspan="4"></td>
+          <td class="num">&#8381;{{ cart.get_total_price|floatformat:2 }}</td>
+        </tr>
+        <tr>
+          <td>
+            "{{ cart.coupon.code }}" <span>{% trans 'coupon' %}</span> ({{ cart.coupon.discount }}% <span>{% trans 'off' %}</span>)
+          </td>
+          <td colspan="4"></td>
+          <td class="num neg">- &#8381;{{ cart.get_discount|floatformat:2 }}</td>
+        </tr>
+      {% endif %}
       <tr class="total">
         <td>
           {% trans 'Total' %}
         </td>
         <td colspan="4"></td>
-        <td class="num">&#8381;{{ cart.get_total_price }}</td>
+        <td class="num">&#8381;{{ cart.get_total_price_after_discount|floatformat:2 }}</td>
       </tr>
     </tbody>
   </table>
+  <p>
+    {% trans 'Apply a coupon' %}:
+  </p>
+  <form action="{% url 'coupons:apply' %}" method="post">
+    {{ coupon_apply_form }}
+    <input type="submit" value=" {% trans 'Apply' %}" />
+    {% csrf_token %}
+  </form>
   <p class="text-right">
     <a href="{% url 'shop:product_list' %}" class="button light">{% trans 'Continue shopping' %}</a>
     <a href="{% url 'orders:order_create' %}" class="button">{% trans 'Checkout' %}</a>
