--- a/payment/templates/payment/process.html
+++ b/payment/templates/payment/process.html
@@ -42,11 +42,28 @@
           <td class="num">&#8381;{{ item.get_cost }}</td>
         </tr>
       {% endfor %}
+      {% if order.coupon %}
+        <tr class="subtotal">
+          <td>
+            {% trans 'Subtotal' %}
+          </td>
+          <td colspan="3"></td>
+          <td class="num">${{ order.get_total_cost_before_discount|floatformat:2 }}</td>
+        </tr>
+        <tr>
+          <td>
+            "{{ order.coupon.code }}" <span>{% trans 'coupon' %}</span> ({{ order.discount }}<i>%</i> {% trans 'off' %})
+          </td>
+          <td colspan="3"></td>
+          <td class="num neg">- &#8381;{{ order.get_discount|floatformat:2 }}</td>
+        </tr>
+      {% endif %}
       <tr class="total">
-        <td colspan="4">
+        <td>
           {% trans 'Total' %}
         </td>
-        <td class="num">&#8381;{{ order.get_total_cost }}</td>
+        <td colspan="3"></td>
+        <td class="num">&#8381;{{ order.get_total_cost|floatformat:2 }}</td>
       </tr>
     </tbody>
   </table>
