--- a/orders/templates/orders/order/pdf.html
+++ b/orders/templates/orders/order/pdf.html
@@ -40,6 +40,22 @@
             <td class="num">${{ item.get_cost }}</td>
           </tr>
         {% endfor %}
+
+        {% if order.coupon %}
+          <tr class="subtotal">
+            <td colspan="3">
+              {% trans 'Subtotal' %}
+            </td>
+            <td class="num">&#8381;{{ order.get_total_cost_before_discount|floatformat:2 }}</td>
+          </tr>
+          <tr>
+            <td colspan="3">
+              "{{ order.coupon.code }}" <span>{% trans 'coupon' %}</span> ({{ order.discount }}<i>%</i> {% trans 'off' %})
+            </td>
+            <td class="num neg">- &#8381;{{ order.get_discount|floatformat:2 }}</td>
+          </tr>
+        {% endif %}
+
         <tr class="total">
           <td colspan="3">
             {% trans 'Total' %}
@@ -49,9 +65,21 @@
       </tbody>
     </table>
     <span class="{% if order.paid %}
+        
+        
+        
         paid
+
+
+
       {% else %}
+        
+        
+        
         pending
+
+
+
       {% endif %}">
       {% if order.paid %}
         {% trans 'Paid' %}
